Bug 290317 -  AgentLocation API cleanup