@@ -10,19 +10,20 @@
  *******************************************************************************/
 package org.eclipse.equinox.internal.p2.core;
 
+import org.eclipse.equinox.p2.core.IAgentLocation;
+
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Dictionary;
 import java.util.Hashtable;
 import org.eclipse.core.runtime.Path;
-import org.eclipse.equinox.internal.provisional.p2.core.location.AgentLocation;
 import org.eclipse.osgi.framework.log.FrameworkLog;
 import org.osgi.framework.*;
 import org.osgi.util.tracker.ServiceTracker;
 
 public class Activator implements BundleActivator {
-	public static AgentLocation agentDataLocation = null;
+	public static IAgentLocation agentDataLocation = null;
 
 	public static BundleContext context;
 	private static final String DEFAULT_AGENT_LOCATION = "../p2"; //$NON-NLS-1$
@@ -51,12 +52,12 @@ public class Activator implements BundleActivator {
 	 * NOTE: This method is copied from LocationHelper in org.eclipse.osgi
 	 * due to access restrictions.
 	 */
-	private static URL adjustTrailingSlash(URL url, boolean trailingSlash) throws MalformedURLException {
-		String file = url.getFile();
+	private static URI adjustTrailingSlash(URI url, boolean trailingSlash) throws URISyntaxException {
+		String file = url.toString();
 		if (trailingSlash == (file.endsWith("/"))) //$NON-NLS-1$
 			return url;
 		file = trailingSlash ? file + "/" : file.substring(0, file.length() - 1); //$NON-NLS-1$
-		return new URL(url.getProtocol(), url.getHost(), file);
+		return new URI(file);
 	}
 
 	/**
@@ -68,22 +69,22 @@ public class Activator implements BundleActivator {
 	 * @param trailingSlash flag to indicate a trailing slash on the spec
 	 * @return a URL
 	 */
-	private static URL buildURL(String spec, boolean trailingSlash) {
+	private static URI buildURL(String spec, boolean trailingSlash) {
 		if (spec == null)
 			return null;
 		boolean isFile = spec.startsWith("file:"); //$NON-NLS-1$
 		try {
 			if (isFile)
-				return adjustTrailingSlash(new File(spec.substring(5)).toURL(), trailingSlash);
-			return new URL(spec);
-		} catch (MalformedURLException e) {
+				return adjustTrailingSlash(new File(spec.substring(5)).toURI(), trailingSlash);
+			return new URI(spec);
+		} catch (URISyntaxException e) {
 			// if we failed and it is a file spec, there is nothing more we can do
 			// otherwise, try to make the spec into a file URL.
 			if (isFile)
 				return null;
 			try {
-				return adjustTrailingSlash(new File(spec).toURL(), trailingSlash);
-			} catch (MalformedURLException e1) {
+				return adjustTrailingSlash(new File(spec).toURI(), trailingSlash);
+			} catch (URISyntaxException e1) {
 				return null;
 			}
 		}
@@ -114,16 +115,16 @@ public class Activator implements BundleActivator {
 		return value + source.substring(var.length());
 	}
 
-	private AgentLocation buildLocation(String property, URL defaultLocation, boolean readOnlyDefault, boolean addTrailingSlash) {
+	private IAgentLocation buildLocation(String property, URI defaultLocation, boolean readOnlyDefault, boolean addTrailingSlash) {
 		String location = Activator.context.getProperty(property);
 		// if the instance location is not set, predict where the workspace will be and 
 		// put the instance area inside the workspace meta area.
 		if (location == null)
-			return new BasicLocation(defaultLocation);
+			return new AgentLocation(defaultLocation);
 		if (location.equalsIgnoreCase(NONE))
 			return null;
 		if (location.equalsIgnoreCase(NO_DEFAULT))
-			return new BasicLocation(null);
+			return new AgentLocation(null);
 		if (location.startsWith(VAR_USER_HOME)) {
 			String base = substituteVar(location, VAR_USER_HOME, PROP_USER_HOME);
 			location = new Path(base).toFile().getAbsolutePath();
@@ -134,10 +135,10 @@ public class Activator implements BundleActivator {
 			//note the config dir system property is already a URL
 			location = substituteVar(location, VAR_CONFIG_DIR, PROP_CONFIG_DIR);
 		}
-		URL url = buildURL(location, addTrailingSlash);
-		BasicLocation result = null;
+		URI url = buildURL(location, addTrailingSlash);
+		AgentLocation result = null;
 		if (url != null) {
-			result = new BasicLocation(url);
+			result = new AgentLocation(url);
 		}
 		return result;
 	}
@@ -156,12 +157,12 @@ public class Activator implements BundleActivator {
 	public void start(BundleContext aContext) throws Exception {
 		instance = this;
 		Activator.context = aContext;
-		URL defaultLocation = new URL(aContext.getProperty(PROP_CONFIG_DIR) + DEFAULT_AGENT_LOCATION + '/');
+		URI defaultLocation = new URI(aContext.getProperty(PROP_CONFIG_DIR) + DEFAULT_AGENT_LOCATION + '/');
 		agentDataLocation = buildLocation(PROP_AGENT_DATA_AREA, defaultLocation, false, true);
 		Dictionary locationProperties = new Hashtable();
 		if (agentDataLocation != null) {
 			locationProperties.put("type", PROP_AGENT_DATA_AREA); //$NON-NLS-1$
-			agentLocationRegistration = aContext.registerService(AgentLocation.SERVICE_NAME, agentDataLocation, locationProperties);
+			agentLocationRegistration = aContext.registerService(IAgentLocation.SERVICE_NAME, agentDataLocation, locationProperties);
 		}
 	}
 
